<resources>
    <string name="app_name">Harvest Scan</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_my_plant">My Plant</string>
    <string name="title_result">Result</string>
    <string name="insert_image">Please Insert Image Plant</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_media_selected">No media selected</string>
    <string name="analyze">Analyze</string>
    <string name="text_analyze">Click "Analyze" to identify diseases.</string>
    <string name="logout">Logout</string>
    <string name="about_card">About Harvest Scan</string>
    <string name="harvest_scan_logo">harvest scan logo</string>
    <string name="welcome_message">Welcome to Harvest Scan</string>
    <string name="add_reminder">+ Add Reminder</string>
    <string name="add_plant">+ Add Plant</string>
    <string name="history">History</string>
    <string name="about_harvest_scan">\n\nHarvest Scan is a mobile application with the main feature of scanning plant leaves to identify diseases and provide treatment options. \n\nSimply click the scan menu, capture an image directly through the camera app, or choose an existing photo from your gallery. Once you\'ve selected your image, hit the "analyze" button to have Harvest Scan identify the plant disease and provide recommendations for treatment. \n\nHarvest Scan also allows you to create a personalized plant list and set reminders to ensure your precious greenery thrives. \n\nScan Your Plants To Save Your Plants!</string>
    <string name="text_add_plant">Add Plant</string>
    <string name="desk_add_plant">Add Plant Photo (optional):</string>
    <string name="hint_name_plant">Enter plant name</string>
    <string name="hint_type_plant">Enter plant type</string>
    <string name="hint_botanical_plant">Enter botanical name</string>
    <string name="desc_image_plant">image_plant</string>
    <string name="save_add_plant">SAVE</string>
    <string name="green_logo">Green Logo</string>
    <string name="white_logo">white_logo</string>
    <string name="title_login_page">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="title_signup_page">"Create your account"</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account">Don\'t have an account? <b>Register</b></string>
    <string name="signup_success_message">User created successfully!</string>
    <string name="login_success_message">Login Successful</string>
    <string name="logout_alert_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="result_string" translatable="false">%s : %s</string>
    <string name="helper_text">Max character</string>
    <string name="delete_plant">delete_content</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_description">Enter your email to receive a reset password</string>
    <string name="btn_submit">Submit</string>
    <string name="results_of_the_analysis">Results of the Analysis</string>
    <string name="analysis_results_description">Analysis Results Description</string>
    <string name="tips">Tips</string>
    <string name="image_leaf_item_history">image_leaf</string>
    <string name="delete_button_item_history">delete_button</string>
    <string name="type_plant_item_plant">Type Plant :</string>
    <string name="botanical_name_item_plant">Botanical Name :</string>
    <string name="add_reminder_item_plant">Add Reminder</string>
    <string name="plant_image_item_plant">Plant Image Item Plant</string>
    <string name="choose_your_plant">Choose your plant :</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="choose_reminder_day">Choose Reminder Day :</string>
    <string name="remind_me_to_reminder">Remind me to...</string>
    <string name="turn_on_reminder_button">Turn On Reminder</string>
    <string name="tittle_set_reminder">Set Reminder</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="plant_has_been_added">Plant has been added</string>
    <string name="all_inputs_must_be_filled">All inputs must be filled</string>
    <string name="are_you_sure_you_want_to_delete_this_plant">Are you sure you want to delete this plant?</string>
    <string name="plant_deleted">Plant deleted</string>
    <string name="please_add_a_plant_first">Please add a plant first.</string>
    <string name="_02d_02d" translatable="false">%02d:%02d</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="reminder_successfully_saved">Reminder successfully saved!</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="plantname">plantName</string>
    <string name="notes">notes</string>
    <string name="invalid_day">Invalid day</string>
    <string name="you_still_don_t_have_any_plants">You still don\'t have any plants.</string>
    <string name="tvcontinue">Continue</string>
    <string name="reminder_channel_id" translatable="false">reminder_channel</string>
    <string name="reminder_channel" translatable="false">Reminder Channel</string>
    <string name="channel_for_reminder_notifications">Channel for reminder notifications</string>
    <string name="reminder_for_plant">Reminder for Plant</string>
    <string name="don_t_forget_to_take_care_of_the_plants_with_notes">Don\'t forget to take care of the plants %1$s with notes %2$s</string>
    <string name="reminder_channel_uppercase" translatable="false">REMINDER_CHANNEL</string>
    <string name="reminder">Reminder</string>
    <string name="no_description_available">No description available</string>
    <string name="no_tips_available">No tips available</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="yeay">Yeay!</string>
    <string name="unknown_viewmodel_class">"Unknown ViewModel class: "</string>
    <string name="filename_format" translatable="false">yyyyMMdd_HHmmss</string>
    <string name="image_jpeg" translatable="false">image/jpeg</string>
    <string name="pictures_mycamera" translatable="false">Pictures/MyCamera/</string>
    <string name="display_name" translatable="false">%1$s.jpg</string>
    <string name="image_file" translatable="false">/MyCamera/%1$s.jpg</string>
    <string name="result_image" translatable="false">Result_image</string>
    <string name="description_of_analysis_title">Description of Analysis :</string>
    <string name="result_uppercase">RESULT</string>
    <string name="tips_title">Tips :</string>
    <string name="tab_1">My Garden</string>
    <string name="tab_2">Reminders</string>
    <string name="desc_1">A fungal disease causing dark, velvety spots on leaves.</string>
    <string name="tips_1">Use fungicides and resistant varieties to manage apple scab.</string>
    <string name="desc_2">A fungal disease that causes black, rotten spots on apples.</string>
    <string name="tips_2">Remove and destroy infected fruits and use fungicides.</string>
    <string name="desc_3">A fungal infection causing reddish-brown spots on leaves.</string>
    <string name="tips_3">Remove infected leaves and use fungicides.</string>
    <string name="desc_4">Healthy apple with no signs of disease.</string>
    <string name="tips_4">Ensure proper care and maintenance for healthy growth.</string>
    <string name="desc_5">Healthy blueberry plant.</string>
    <string name="tips_5">Provide adequate water and nutrients for healthy growth.</string>
    <string name="desc_6">A fungal disease causing white, powdery spots on leaves.</string>
    <string name="tips_6">Apply fungicides and remove infected leaves.</string>
    <string name="desc_7">Healthy cherry plant with no signs of disease.</string>
    <string name="tips_7">Ensure proper care and maintenance for healthy growth.</string>
    <string name="desc_8">A fungal disease causing gray, necrotic spots on corn leaves.</string>
    <string name="tips_8">Use resistant varieties and apply fungicides.</string>
    <string name="desc_9">A fungal disease causing reddish-brown pustules on leaves.</string>
    <string name="tips_9">Apply fungicides and remove infected leaves.</string>
    <string name="desc_10">A fungal disease causing large, irregular lesions on leaves.</string>
    <string name="tips_10">Use resistant varieties and apply fungicides.</string>
    <string name="desc_11">Healthy corn plant with no signs of disease.</string>
    <string name="tips_11">Ensure proper care and maintenance for healthy growth.</string>
    <string name="desc_12">A fungal disease causing black spots on grape leaves.</string>
    <string name="tips_12">Apply fungicides and remove infected leaves.</string>
    <string name="desc_13">A fungal disease causing black measles on grapevines.</string>
    <string name="tips_13">Prune infected vines and apply fungicides.</string>
    <string name="desc_14">A fungal disease causing necrotic lesions on grape leaves.</string>
    <string name="tips_14">Remove infected leaves and apply fungicides.</string>
    <string name="desc_15">Healthy grape plant with no signs of disease.</string>
    <string name="tips_15">Ensure proper care and maintenance for healthy growth.</string>
    <string name="desc_16">A bacterial disease causing yellowing and greening of citrus leaves.</string>
    <string name="tips_16">Remove infected leaves and use insecticides.</string>
    <string name="desc_17">A bacterial disease causing dark, water-soaked lesions on leaves.</string>
    <string name="tips_17">Apply bactericides and remove infected leaves.</string>
    <string name="desc_18">Healthy peach plant with no signs of disease.</string>
    <string name="tips_18">Ensure proper care and maintenance for healthy growth.</string>
    <string name="desc_19">A bacterial disease causing dark, water-soaked lesions on leaves.</string>
    <string name="tips_19">Apply bactericides and remove infected leaves.</string>
    <string name="desc_20">Healthy pepper plant with no signs of disease.</string>
    <string name="tips_20">Ensure proper care and maintenance for healthy growth.</string>
    <string name="desc_21">A fungal disease causing dark, sunken spots on leaves and tubers.</string>
    <string name="tips_21">Apply fungicides and remove infected leaves.</string>
    <string name="desc_22">A fungal disease causing water-soaked lesions on leaves and tubers.</string>
    <string name="tips_22">Apply fungicides and remove infected leaves.</string>
    <string name="desc_23">Healthy potato plant with no signs of disease.</string>
    <string name="tips_23">Ensure proper care and maintenance for healthy growth.</string>
    <string name="desc_24">Healthy raspberry plant.</string>
    <string name="tips_24">Provide adequate water and nutrients for healthy growth.</string>
    <string name="desc_25">Healthy soybean plant.</string>
    <string name="tips_25">Provide adequate water and nutrients for healthy growth.</string>
    <string name="desc_26">A fungal disease causing white, powdery spots on leaves.</string>
    <string name="tips_26">Apply fungicides and remove infected leaves.</string>
</resources>