<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome_message" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/about"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_harvest_scan"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/harvest_scan_logo"
                    android:layout_weight="1"
                    android:contentDescription="@string/harvest_scan_logo" />

                <TextView
                    android:id="@+id/tv_harvest_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about_harvest_scan"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_scan"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_scan"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:drawableBottomCompat="@drawable/img_scan" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_history_scan"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:drawableBottomCompat="@drawable/ic_history" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_my_plant"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_my_plant"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:drawableBottomCompat="@drawable/img_my_plant" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_add_reminder"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_reminder"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:drawableBottomCompat="@drawable/img_reminder" />
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>